fix navbar not showing text in white mode

--- a/styles/prism-mac-window.css
+++ b/styles/prism-mac-window.css
@@ -25,7 +25,7 @@ pre[class*='language-'].line-numbers {
 }
 
 .pre-mac {
-  position: absolute;
+  position: relative;
 
   top: 7px;
 
